server/compilers/goLiteJS/src/test/ml1/invalid/func0.go
package main

func f1(a) { 

}
